--- a/l10n_br_account_product/test/account_customer_invoice.yml
+++ b/l10n_br_account_product/test/account_customer_invoice.yml
@@ -80,6 +80,34 @@
   !assert {model: account.invoice, id: account_invoice_customer_sp_sp}:
     - state == 'sefaz_export'
 -
+  I check invoice totals
+-
+  !assert {model: account.invoice, id: account_invoice_customer_sp_sp}:
+    - amount_gross == 2400.00
+    - amount_discount == 0.00
+    - amount_untaxed == 2400.00
+    - amount_tax == 240.00
+    - amount_total == 2640.00
+    - residual == 2640.00
+-
+  I check invoice tax_lines
+-
+  !python {model: account.invoice}: |
+    invoice = self.browse(cr, uid, ref('account_invoice_customer_sp_sp'), context=context)
+    for tax in invoice.tax_line:
+      if tax.base_code_id.domain == 'ipi':
+        assert tax.base == 2400.00 , "Base de ipi incorreta"
+        assert tax.amount == 240.00 , "Total do ipi incorreto"
+      if tax.base_code_id.domain == 'icms':
+        assert tax.base_amount == 2400.00 , "Base de icms incorreta"
+        assert tax.tax_amount == 432.00 , "Total do icms incorreto"
+      if tax.base_code_id.domain == 'pis':
+        assert tax.base_amount == 2400.00 , "Base de pis incorreta"
+        assert tax.tax_amount ==  15.60 , "Total do pis incorreto"
+      if tax.base_code_id.domain == 'cofins':
+        assert tax.base_amount == 2400.00 , "Base de cofins incorreta"
+        assert tax.tax_amount == 72.00  , "Total do cofins incorreto"
+-
   Create a sale customer invoice from SP to RS fiscal contributor
 -
   !record {model: account.invoice, id: account_invoice_customer_sp_rs, view: l10n_br_account_product_invoice_form}:
@@ -160,3 +188,31 @@
 -
   !assert {model: account.invoice, id: account_invoice_customer_sp_rs}:
     - state == 'sefaz_export'
+-
+  I check invoice totals
+-
+  !assert {model: account.invoice, id: account_invoice_customer_sp_rs}:
+    - amount_gross == 550.00
+    - amount_discount == 0.00
+    - amount_untaxed == 550.00
+    - amount_tax == 82.50
+    - amount_total == 632.50
+    - residual == 632.50
+-
+  I check invoice tax_lines
+-
+  !python {model: account.invoice}: |
+    invoice = self.browse(cr, uid, ref('account_invoice_customer_sp_rs'), context=context)
+    for tax in invoice.tax_line:
+      if tax.base_code_id.domain == 'ipi':
+        assert tax.base == 550.00 , "Base de ipi incorreta"
+        assert tax.amount == 82.50 , "Total do ipi incorreto"
+      if tax.base_code_id.domain == 'icms':
+        assert tax.base_amount == 550.00 , "Base de icms incorreta"
+        assert tax.tax_amount == 66.00 , "Total do icms incorreto"
+      if tax.base_code_id.domain == 'pis':
+        assert tax.base_amount == 550.00 , "Base de pis incorreta"
+        assert tax.tax_amount == 3.58  , "Total do pis incorreto"
+      if tax.base_code_id.domain == 'cofins':
+        assert tax.base_amount == 550.00 , "Base de cofins incorreta"
+        assert tax.tax_amount == 16.50,  "Total do cofins incorreto"
