--- a/l10n_br_account_voucher/test/account_customer_invoice.yml
+++ b/l10n_br_account_voucher/test/account_customer_invoice.yml
@@ -1,5 +1,17 @@
 -
-  Create sale journal
+  Create remittance entrie journal
+-
+  !record {model: account.journal, id: jounal_remittance_entrie}:
+    code: EREM
+    name: Diario de Entrada de Remessa
+    type: bank
+    update_posted: True
+    revenue_expense: False
+    automatic_conciliation: False
+    default_credit_account_id: account.bnk
+    default_debit_account_id: account.bnk
+-
+  Create remittance sale journal
 -
   !record {model: account.journal, id: jounal_remittance}:
     code: DREM
@@ -7,8 +19,10 @@
     type: sale
     update_posted: True
     revenue_expense: False
-    default_credit_account_id: account.a_sale
-    default_debit_account_id: account.a_sale
+    automatic_conciliation: True
+    conciliation_journal: jounal_remittance_entrie
+    default_credit_account_id: account.bnk
+    default_debit_account_id: account.bnk
 -
   Create fiscal category
 -
@@ -18,6 +32,7 @@
     type: output
     journal_type: sale
     property_journal: jounal_remittance
+    state: approved
 -
   Create Fiscal Position
 -
@@ -42,18 +57,28 @@
 -
   Create a customer invoice
 -
-  !record {model: account.invoice, id: account_invoice_customer_remittance, view: view_l10n_br_account_journal_voucher_form}:
-    payment_term: account.account_payment_term_advance
-    partner_id: base.res_partner_3
+  !record {model: account.invoice, id: account_invoice_customer_remittance, view: l10n_br_account.view_l10n_br_account_invoice_form}:
+    partner_id: l10n_br_base.res_partner_akretion
     fiscal_category_id: fiscal_category_remittance
+    fiscal_position: fiscal_position_remittance
+    journal_id: jounal_remittance
     reference_type: none
-    name: 'Test Customer Invoice Remittance'
+    name: 'Remittance'
     invoice_line:
       - product_id: product.product_product_5
         quantity: 10.0
 -
-  I check that Initially customer invoice is in the "Draft" state
+  Check that initially customer invoice is in the "Draft" state
 -
   !assert {model: account.invoice, id: account_invoice_customer_remittance}:
     - state == 'draft'
     - fiscal_position.id == ref('fiscal_position_remittance')
+-
+  Confirm the invoice
+-
+  !workflow {model: account.invoice, action: invoice_open, ref: account_invoice_customer_remittance}
+-
+  Check if invoice will be in paid state at the end
+-
+  !assert {model: account.invoice, id: account_invoice_customer_remittance}:
+    - state == 'paid'
